--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="Quien es, que la inspiró a ser diseñadora, trabajos">
   <meta name="author" content="RominaSantoTomas.com.ar">
 
-	<link rel="stylesheet"href="css/style.css">
+	<link rel="stylesheet"href="css/main.css">
 	<link rel="license" href="copyright.html" />
 
 </head>
