--- a/Que Hacemos.html
+++ b/Que Hacemos.html
@@ -8,8 +8,8 @@
 
 	<title>VALE_OUEYT_PROYECTO</title>
 
-	<link rel="stylesheet"href="css/style.css">
-
+	   <link rel="stylesheet"href="css/main.css">
+    <link rel="license" href="copyright.html" />
 </head>
 
 <body>
