--- a/Acerca.html
+++ b/Acerca.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="Quien es, que la inspiró a ser diseñadora, trabajos">
   <meta name="author" content="RominaSantoTomas.com.ar">
 
-   <link rel="stylesheet"href="css/style.css">
+      <link rel="stylesheet" href="css/main.css">
    <link rel="license" href="copyright.html" />
 
 </head>
@@ -56,14 +56,19 @@
 
 			</div> 
 
-			 <div id="grid">	<p><img src="imagenes/foto vale 2.jpeg" alt="vale diseñadora" width=" 350" height="500" align="left"> El diseño, para mí, tiene que estar entre el arte y la función. Vivimos en un mundo que la mayoría de los elementos básicos ya cumplen su función, pero el placer del objeto está en el arte de como se ejecuta esa acción y como la representa. <em> <strong>El diseño nos permite comunicarnos a través de un mensaje VISUAL. Es obtener manifestaciones o mensajes graficos.</strong> </em><br><strong>El auge actual se debe a la GRAN EXPANSION de todo tipo de MENSAJES VISUALES a través de nuestros diversos dispositivos digitales y tecnológicos</strong></p>
-          <p>El diseño debe de perdurar, no quiere decir que debe ser para siempre, sino que un huella perdure en el tiempo marcando una época, ya sea social o del propio diseñador. <br> <p>Nuestra mente evoluciona y se adapta a los cambios, por lo que el diseño también debe de evolucionar y adaptarse a cada nuevo entorno. Igual que las emociones, que fluctúan a lo largo de la vida, el diseño requiere de cambios para acomodarse en cada nuevo estado emocional.
-          </p>
-          <p>El diseño es el resultado de la interpretación emocional de un objeto o entorno. Es el feeling que tiene con un objecto sin lazos que le oprimen. Debe de ser un proceso libre.</p></p>
-          <p> Mi relación con el diseño nace desde que yo era pequeña, me crie entre imprentas, tintas, historietas, libros. Mi papá me inculco el amor por el diseño y las letras. Tengo en mi memoria recuerdos de sus trabajos, fue un ilustrador, letrista y publicista, que marco mi amor por el diseño, las artes visuales y gráficas, fue un modelo a seguir, siempre apoyandome a cumplir mis metas y sueños. </p>
-		    <p>Mi trabajo abarca gráficos e identidad, productos y empaques, exposiciones e instalaciones y experiencias digitales, publicidad y comunicaciones. <br><em> <strong>Al trabajar de forma independiente me ha permitido relacionarme de forma mas directa con los clientes, llegando a un mejor entendimiento de lo que ellos quieren mostrar de sus marcas.</strong> <br></em></p> <p>El proceso creativo de cualquier diseñador es fundamental para poder destacar por encima del resto. Lo que nos lleva a realizar trabajos unicos. Fijarte en las nuevas tendencias en diferentes ámbitos te permitirá desarrollar nuevas ideas.<em> <strong>Crear resultados únicos es lo que te dará éxito en tu camino como diseñador gráfico.</strong></em></p> 
-          <p>Tengo catorce años de carrera profesional, que me ha llevado a dar siempre el máximo en cada uno de mis proyectos. Elsa Peretti, una gran diseñadora conocida por sus trabajos para Tiffany, lo definió muy bien: «Thanks to everybody who will continue to work with the spirit of a craftsman, and without whom we will never realize our fantasy«. Necesitamos artesanos para hacer realidad nuestros sueños, nuestras fantasías para ir más allá del producto, sin cuestionarse su función.</p>
-          <p>Si fuéramos robots, con un solo diseño para cada objeto bastaría, pero vivimos en mundo inestable lleno de sentimientos, con lo que la percepción subjetiva de cada individuo cambia al igual que debe de hacer el diseño.</p>
+		<div id="grid">	 <p>El diseño, para mí, tiene que estar entre el arte y la función. Vivimos en un mundo que la mayoría de los elementos básicos ya cumplen su función, pero el placer del objeto está en el arte de como se ejecuta esa acción y como la representa. <em> <strong>El diseño nos permite comunicarnos a través de un mensaje VISUAL. Es obtener manifestaciones o mensajes graficos.</strong> </em><br><strong>El auge actual se debe a la GRAN EXPANSION de todo tipo de MENSAJES VISUALES a través de nuestros diversos dispositivos digitales y tecnológicos</strong></p>
+
+        <p>El diseño debe de perdurar, no quiere decir que debe ser para siempre, sino que un huella perdure en el tiempo marcando una época, ya sea social o del propio diseñador. <br>  <p>Nuestra mente evoluciona y se adapta a los cambios, por lo que el diseño también debe de evolucionar y adaptarse a cada nuevo entorno. Igual que las emociones, que fluctúan a lo largo de la vida, el diseño requiere de cambios para acomodarse en cada nuevo estado emocional.</p>
+
+        <p>El diseño es el resultado de la interpretación emocional de un objeto o entorno. Es el feeling que tiene con un objecto sin lazos que le oprimen. Debe de ser un proceso libre.</p></p>
+
+        <p> Mi relación con el diseño nace desde que yo era pequeña, me crie entre imprentas, tintas, historietas, libros. Mi papá me inculco el amor por el diseño y las letras. Tengo en mi memoria recuerdos de sus trabajos, fue un ilustrador, letrista y publicista, que marco mi amor por el diseño, las artes visuales y gráficas, fue un modelo a seguir, siempre apoyandome a cumplir mis metas y sueños. </p>
+
+		<p>Mi trabajo abarca gráficos e identidad, productos y empaques, exposiciones e instalaciones y experiencias digitales, publicidad y comunicaciones. <br><em> <strong>Al trabajar de forma independiente me ha permitido relacionarme de forma mas directa con los clientes, llegando a un mejor entendimiento de lo que ellos quieren mostrar de sus marcas.</strong> <br></em></p> <p class="centrado"><img src="imagenes/foto vale 2.jpeg" alt="vale diseñadora" width=" 350" height="350"></p><p>El proceso creativo de cualquier diseñador es fundamental para poder destacar por encima del resto. Lo que nos lleva a realizar trabajos unicos. Fijarte en las nuevas tendencias en diferentes ámbitos te permitirá desarrollar nuevas ideas.<em> <strong>Crear resultados únicos es lo que te dará éxito en tu camino como diseñador gráfico.</strong></em></p> 
+
+        <p>Tengo catorce años de carrera profesional, que me ha llevado a dar siempre el máximo en cada uno de mis proyectos. Elsa Peretti, una gran diseñadora conocida por sus trabajos para Tiffany, lo definió muy bien: «Thanks to everybody who will continue to work with the spirit of a craftsman, and without whom we will never realize our fantasy«. Necesitamos artesanos para hacer realidad nuestros sueños, nuestras fantasías para ir más allá del producto, sin cuestionarse su función.</p>
+
+        <p>Si fuéramos robots, con un solo diseño para cada objeto bastaría, pero vivimos en mundo inestable lleno de sentimientos, con lo que la percepción subjetiva de cada individuo cambia al igual que debe de hacer el diseño.</p>
        </div>
 		     
 	</section>
