--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="imagenes/carrusel.JPG" class="d-block w-100" alt="Diseño Editorial">
+      <img src="Imagenes/carrusel.JPG" class="d-block w-100" alt="Diseño Editorial">
     </div>
     <div class="carousel-item">
-      <img src="imagenes/carrusel 1.JPG" class="d-block w-100" alt="Lettering">
+      <img src="Imagenes/carrusel-1.JPG" class="d-block w-100" alt="Lettering">
     </div>
     <div class="carousel-item">
-      <img src="imagenes/carrusel 2.PNG" class="d-block w-100" alt="Diseño Gráfico">
+      <img src="Imagenes/carrusel-2.PNG" class="d-block w-100" alt="Diseño Gráfico">
     </div>
     <div class="carousel-item">
-      <img src="imagenes/carrusel 3.PNG" class="d-block w-100" alt="Packaging">
+      <img src="Imagenes/carrusel-3.PNG" class="d-block w-100" alt="Packaging">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -98,10 +98,10 @@
 		
 
 		<a href="https://www.instagram.com/la_vale_o/">
-      <img src="imagenes/instagram.png" width="40" height="40" alt="icono instagram">
+      <img src="Imagenes/instagram.png" width="40" height="40" alt="icono instagram">
     </a> 
     <a href="https://www.facebook.com/vale.oueyt">
-      <img src="imagenes/facebook.png" width="40" alt="icono facebook">
+      <img src="Imagenes/facebook.png" width="40" alt="icono facebook">
     </a>
 
 		
