--- a/Contacto.html
+++ b/Contacto.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
            <h1>VALE OUEYT DISEÑADORA</h1>
-              <img src="imagenes/LOGO.JPEG" alt="logo" width="95%" height="250">     
+              <img src="Imagenes/LOGO.JPEG" alt="logo" width="95%" height="250">     
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -132,12 +132,12 @@
 
    <a href="https://www.instagram.com/la_vale_o/">
     
-        <img src="imagenes/instagram.png" width="40" height="40" alt="icono instagram"> 
+        <img src="Imagenes/instagram.png" width="40" height="40" alt="icono instagram"> 
    </a> 
     
    <a href="https://www.facebook.com/vale.oueyt">
 
-         <img src="imagenes/facebook.png" width="40" alt="icono facebook">
+         <img src="Imagenes/facebook.png" width="40" alt="icono facebook">
    </a>
 	
 
