cambiamos los nombres de las fotos

--- a/Porfolio.html
+++ b/Porfolio.html
@@ -55,14 +55,14 @@
 
 	 <div class="portfolio">
     <h4 style="text-align: center;"><a href="Proyectos.html" target="_blank">Proyectos</a></h4>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Brochure 2.JPG" alt="brochure" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Diseño-de-identidad.JPG" alt="Identidad" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Brochure2.JPG" alt="brochure" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Diseñodeidentidad.JPG" alt="Identidad" width="300" height="194" /></a>
      <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Lettering.JPG" alt="Letras" width="300" height="194" /></a>
      <a ><img class="alignnone wp-image-6962 size-full" src="imagenes/Marcas.JPG" alt="marcas" width="300" height="194" /></a>
      <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Packaging1.JPG" alt="embalajes" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/etiquetas-2.JPEG" alt="brochuer" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/etiquetas2.JPEG" alt="brochuer" width="300" height="194" /></a>
      <a ><img class="alignnone wp-image-6962 size-full" src=Imagenes/trabajo.JPEG" alt="etiquetas" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/trabajo-1.JPEG" alt="etiquetas" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/trabajo1.JPEG" alt="etiquetas" width="300" height="194" /></a>
   </div>
 	
 	
