--- a/Que Hacemos.html
+++ b/Que Hacemos.html
@@ -51,7 +51,7 @@
  
     <div class="row">
      <article class="col-lg-3 col-md-6 mb-2">
-         <img src="Imagenes/Diseño-de-Marcas.jpg" alt="Marcas"class="w-100">
+         <img src="Imagenes/DiseñodeMarcas.jpg" alt="Marcas"class="w-100">
 
          <h3>DISEÑO DE MARCAS</h3>
              <p><strong>El diseño de marca es la representación gráfica de una empresa.Se trata de conectar con el logotipo de la misma. ... Es, esencialmente, cómo una empresa quiere ser percibida por los clientes. El objetivo del diseño de marcas es poder comunicarse con el público al cual va dirigido</strong></p> <br><p>Lograr una imagen solida y con personalidad, utilizando el diseño como una herramienta para destacar lo que cada cliente necesita, brindando toda la tecnica y creatividad necesaria para satisfacer las necesidades de cada empresa. <em> Diseñar cada pieza que forma parte de la identidad visual de una organización, es un trabajo muy fino que se centra en transmitir una linea de diseño que denote la unidad y seriedad profesional</em></p>
@@ -70,7 +70,7 @@
 
       <article class="col-lg-3 col-md-6 mb-2">
             
-             <img src="Imagenes/Diseño-Editorial.png" alt="editorial"class="w-100">
+             <img src="Imagenes/DiseñoEditorial.png" alt="editorial"class="w-100">
 
              <h3>DISEÑO EDITORIAL</h3>
              <p>El diseño editorial es la rama del diseño gráfico (actividad que consiste en proyectar comunicaciones visuales destinadas a transmitir mensajes específicos a grupos sociales, con objetivos determinados y que ayuda a optimizar las comunicaciones gráficas) dedicada al diseño, maquetación y composición de publicaciones (impresas o digitales) tales como revistas, periódicos, libros o arte de tapa en discos.</p>
