--- a/Porfolio.html
+++ b/Porfolio.html
@@ -24,7 +24,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
            <h1>VALE OUEYT DISEÑADORA</h1>
-              <img src="Imagenes/LOGO.JPEG" alt="logo" width="95%" height="250">     
+              <img src="Imagenes/logo2.jpeg" alt="logo" width="95%" height="250">     
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,14 +55,14 @@
 
 	 <div class="portfolio">
     <h4 style="text-align: center;"><a href="Proyectos.html" target="_blank">Proyectos</a></h4>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Brochure2.JPG" alt="brochure" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Diseñodeidentidad.JPG" alt="Identidad" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Lettering.JPG" alt="Letras" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="imagenes/Marcas.JPG" alt="marcas" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Packaging1.JPG" alt="embalajes" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/etiquetas2.JPEG" alt="brochuer" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src=Imagenes/trabajo.JPEG" alt="etiquetas" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/trabajo1.JPEG" alt="etiquetas" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Brochure2.jpg" alt="brochure" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Diseñodeidentidad.jpg" alt="Identidad" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Lettering.jpg" alt="Letras" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="imagenes/Marcas.jpg" alt="marcas" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Packaging1.jpg" alt="embalajes" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/etiquetas2.jpeg" alt="brochuer" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src=Imagenes/trabajo.jpeg" alt="etiquetas" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/trabajo1.jpeg" alt="etiquetas" width="300" height="194" /></a>
   </div>
 	
 	
