--- a/Que Hacemos.html
+++ b/Que Hacemos.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
            <h1>VALE OUEYT DISEÑADORA</h1>
-              <img src="Imagenes/LOGO.JPEG" alt="logo" width="95%" height="250">     
+              <img src="Imagenes/logo2.jpeg" alt="logo" width="95%" height="250">     
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
