--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
            <h1>VALE OUEYT DISEÑADORA</h1>
-              <img src="Imagenes/LOGO.JPEG" alt="logo" width="95%" height="250">     
+              <img src="Imagenes/logo2.jpeg" alt="logo" width="95%" height="250">     
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,16 +61,16 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Imagenes/carrusel.JPG" class="d-block w-100" alt="Diseño Editorial">
+      <img src="Imagenes/carrusel.jpg" class="d-block w-100" alt="Diseño Editorial">
     </div>
     <div class="carousel-item">
-      <img src="Imagenes/carrusel1.JPG" class="d-block w-100" alt="Lettering">
+      <img src="Imagenes/carrusel1.jpg" class="d-block w-100" alt="Lettering">
     </div>
     <div class="carousel-item">
-      <img src="Imagenes/carrusel2.PNG" class="d-block w-100" alt="Diseño Gráfico">
+      <img src="Imagenes/carrusel2.png" class="d-block w-100" alt="Diseño Gráfico">
     </div>
     <div class="carousel-item">
-      <img src="Imagenes/carrusel3.PNG" class="d-block w-100" alt="Packaging">
+      <img src="Imagenes/carrusel3.png" class="d-block w-100" alt="Packaging">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
