--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Imagenes/carrusel.jpg" class="d-block w-100" alt="Diseño Editorial">
+      <img src="Imagenes/CARRUSEL.jpg" class="d-block w-100" alt="Diseño Editorial">
     </div>
     <div class="carousel-item">
-      <img src="Imagenes/carrusel1.jpg" class="d-block w-100" alt="Lettering">
+      <img src="Imagenes/CARRUSEL1.jpg" class="d-block w-100" alt="Lettering">
     </div>
     <div class="carousel-item">
-      <img src="Imagenes/carrusel2.png" class="d-block w-100" alt="Diseño Gráfico">
+      <img src="Imagenes/CARRUSEL2.png" class="d-block w-100" alt="Diseño Gráfico">
     </div>
     <div class="carousel-item">
-      <img src="Imagenes/carrusel3.png" class="d-block w-100" alt="Packaging">
+      <img src="Imagenes/CARRUSEL3.png" class="d-block w-100" alt="Packaging">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
