--- a/Porfolio.html
+++ b/Porfolio.html
@@ -56,12 +56,12 @@
 	 <div class="portfolio">
     <h4 style="text-align: center;"><a href="Proyectos.html" target="_blank">Proyectos</a></h4>
      <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/BROCHURE2.jpg" alt="brochure" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Diseñodeidentidad.jpg" alt="Identidad" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Identidad.jpg" alt="Identidad" width="300" height="194" /></a>
      <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Lettering.jpg" alt="Letras" width="300" height="194" /></a>
      <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Marcas.jpg" alt="marcas" width="300" height="194" /></a>
      <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/Packaging1.jpg" alt="embalajes" width="300" height="194" /></a>
      <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/etiquetas2.jpeg" alt="brochuer" width="300" height="194" /></a>
-     <a ><img class="alignnone wp-image-6962 size-full" src=Imagenes/trabajo.jpeg" alt="etiquetas" width="300" height="194" /></a>
+     <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/trabajo.jpeg" alt="etiquetas" width="300" height="194" /></a>
      <a ><img class="alignnone wp-image-6962 size-full" src="Imagenes/trabajo1.jpeg" alt="etiquetas" width="300" height="194" /></a>
   </div>
 	
